test/test_suite7/errors/macro_recurse_twice.c3
module oups;
import std::io;

fn void main()
{
    recm(1);
}

macro recm(x)
{
    recm(x + 1); // #error: Failure
    recm(x + 1);
}